--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,7 @@
   --fw-bold: 700;
   /* Border Radius */
   --border-radius-12: 0.75rem;
+  --border-radius-16: 1rem;
   --border-radius-20: 1.25rem;
 }
 /* Reset */
@@ -95,6 +96,8 @@ img {
 /* Styling */
 body {
   font-family: var(--quicksand);
+  background-image: url(../assets/bg.png),
+    linear-gradient(to bottom, #fff, #fea301 25%);
 }
 
 .container {
@@ -116,11 +119,14 @@ body {
 .gallery-btn {
   font-weight: var(--fw-medium);
   font-family: var(--raleway);
-  padding: 0.625rem;
+  color: var(--white);
+  padding: 0.825rem;
   border-radius: 100vmax;
   border: none;
+  position: absolute;
+  top: 10px;
 }
-/* Header */
+/* Header Portion Styling*/
 header {
   margin-top: 0.625rem;
   display: flex;
@@ -132,19 +138,19 @@ header nav {
   display: flex;
   gap: 1rem;
 }
+/* Hero Portion Styling*/
 .hero {
   display: flex;
   justify-content: space-between;
-  /* margin-top: 2rem; */
 }
 .hero button {
   background-color: var(--black);
   color: var(--white);
 }
-.content {
+.hero .content {
   padding-top: 7rem;
 }
-.primary-header {
+.hero .primary-header {
   width: 17ch;
   font-size: var(--fs-600);
   line-height: 50px;
@@ -156,7 +162,214 @@ header nav {
   color: var(--black);
   width: 52ch;
 }
+/* Courses Portion */
+.courses {
+  background-image: url(../assets/bg.png);
+  background-position: -10px;
+}
+.secondary-header {
+  margin-top: 2rem;
+  text-align: center;
+  font-size: calc(var(--fs-600) - 10px);
+  font-weight: var(--fw-bold);
+}
+.cards__container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 1.5rem;
+  margin-top: 3rem;
+}
+.card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+  padding: 2rem;
+  border-radius: var(--border-radius-20);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+.card p {
+  color: #808080;
+  font-weight: var(--fw-medium);
+  font-family: var(--raleway);
+  font-size: calc(var(--fs-100) -3px);
+  line-height: 27px;
+  text-align: center;
+}
+.card button {
+  margin-top: 0.625rem;
+  border: none;
+  background: transparent;
+  font-weight: var(--fw-bold);
+  font-size: calc(var(--fs-100) -1px);
+}
+.card img {
+  width: 100px;
+  height: 100px;
+}
+.card-1 {
+  background-image: linear-gradient(to top, #fff 50%, #def5ff);
+}
+.card-2 {
+  background-image: linear-gradient(to top, #fff 50%, #fff4dc);
+}
+.card-3 {
+  background-image: linear-gradient(to top, #fff 50%, #f2e8ff);
+}
+.chevron {
+  margin-block: 3rem;
+  display: flex;
+  gap: 1rem;
+  margin-left: 500px;
+}
+.chevron .circle {
+  /* margin-right: 100px; */
+  border-radius: 50%;
+  width: 60px;
+  height: 60px;
+  background-color: orange;
+  position: relative;
+}
+.circle-1::after,
+.circle-1::before,
+.circle-2::after,
+.circle-2::before {
+  content: "";
+  position: absolute;
+  width: 20px;
+  height: 2px;
+  background-color: var(--white);
+  top: 0;
+  left: 20px;
+}
+.circle-1::after {
+  transform: rotate(-45deg) translateX(-3px) translateY(3px);
+  top: 30%;
+}
+.circle-1::before {
+  top: 50%;
+  transform: rotate(45deg) translateX(4px) translateY(5px);
+}
+.circle-2::after {
+  transform: rotate(45deg) translateX(3px) translateY(3px);
+  top: 30%;
+}
+.circle-2::before {
+  top: 50%;
+  transform: rotate(-45deg) translateX(-4px) translateY(5px);
+}
+.gallery__container {
+  display: grid;
+  gap: 2rem;
+  grid-template-columns: repeat(4, 1fr);
+}
+.gallery__container > :nth-child(1) {
+  grid-column: 1 / 3;
+  grid-row: 1 / 3;
+}
+.gallery-card {
+  border-radius: var(--border-radius-16);
+
+  position: relative;
+  background-color: var(--white);
+  overflow: hidden;
+}
+
+.gallery-card h3 {
+}
+.gallery-btn {
+  font-weight: var(--fw-medium);
+  font-family: var(--raleway);
+  color: var(--white);
+  padding: 0.825rem;
+  border-radius: 100vmax;
+  border: none;
+  position: absolute;
+  top: 100px;
+}
+.hide {
+  display: none;
+}
+.gallery-content {
+  padding: 1.5rem;
+}
+.galleryBtn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  margin-top: 1rem;
+}
+.black {
+  background-color: var(--black);
+  color: var(--white);
+  padding-inline: 3rem;
+}
+.footer {
+  background-color: var(--crystalBlue);
+  padding: 5rem;
+  display: flex;
+  justify-content: space-between;
+  margin-top: 2rem;
+}
+.social__links {
+  display: flex;
+  gap: 1rem;
+}
+.name {
+  display: flex;
+  gap: 0.25rem;
+}
+.name h2 {
+  color: var(--white);
+  font-size: calc(var(--fs-500) - 6px);
+  font-weight: var(--fw-bold);
+  width: 10ch;
+  line-height: 27px;
+}
+.footer-content p {
+  margin-block: 1rem;
+  width: 40ch;
+  font-weight: var(--fw-regular);
+  font-size: var(--fs-100);
+  color: var(--white);
+}
+.footer-nav h3 {
+  font-size: var(--fs-300);
+  font-weight: bold;
+  color: var(--white);
+}
+.footer-nav ul {
+  margin-top: 1rem;
+}
+.footer-nav li {
+  font-weight: var(--fw-medium);
+  font-size: var(--fs-200);
+  color: var(--white);
+  margin-top: 1rem;
+}
+.social__links img {
+  width: 40px;
+  height: 40px;
+  margin-top: 1rem;
+}
+.name img {
+  width: 60px;
+  height: 60px;
+}
+.socials h3 {
+  font-size: calc(var(--fs-400)-2px);
+  font-weight: var(--fw-bold);
+  color: var(--white);
+}
 @media screen and (max-width: 500px) {
+  .hide {
+    display: block;
+  }
+  .container {
+    max-width: 450px;
+  }
   header nav,
   header button {
     display: none;
@@ -191,22 +404,11 @@ header nav {
     top: -16px;
     left: 1px;
   }
-  .container {
-    max-width: 450px;
-  }
+
   .hero {
     flex-direction: column-reverse;
   }
-  .hero__img img {
-    margin-top: 3rem;
-  }
-  .primary-header {
-    margin-top: -100px;
-    font-size: 2rem;
-    text-align: center;
-    line-height: 32px;
-  }
-  .content {
+  .hero .content {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -216,5 +418,42 @@ header nav {
     font-weight: var(--fw-medium);
     width: 40ch;
     text-align: center;
+  }
+  .hero button {
+    border-radius: 0.5rem;
+    font-size: 1rem;
+  }
+  .hero__img img {
+    margin-top: 3rem;
+  }
+  .hero .primary-header {
+    margin-top: -100px;
+    font-size: 2rem;
+    text-align: center;
+    line-height: 32px;
+  }
+  .secondary-header {
+    margin-top: 2rem;
+    text-align: center;
+    font-size: calc(var(--fs-600) - 20px);
+    font-weight: var(--fw-bold);
+  }
+  .cards__container {
+    grid-template-columns: 1fr;
+  }
+  .chevron {
+    display: none;
+  }
+  .gallery__container {
+    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+  }
+  .gallery__container > :nth-child(1) {
+    display: none;
+  }
+  .footer {
+    flex-direction: column;
+  }
+  .socials {
+    margin-top: 1.5rem;
   }
 }
