--- a/css/style.css
+++ b/css/style.css
@@ -96,8 +96,6 @@ img {
 /* Styling */
 body {
   font-family: var(--quicksand);
-  background-image: url(../assets/bg.png),
-    linear-gradient(to bottom, #fff, #fea301 25%);
 }
 
 .container {
@@ -105,6 +103,9 @@ body {
   max-width: 1150px;
   margin-top: 0.0625rem;
   margin-inline: auto;
+}
+#top {
+  margin-top: 1rem;
 }
 .btn {
   padding-block: 0.625rem;
@@ -128,7 +129,6 @@ body {
 }
 /* Header Portion Styling*/
 header {
-  margin-top: 0.625rem;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -263,10 +263,18 @@ header nav {
   display: grid;
   gap: 2rem;
   grid-template-columns: repeat(4, 1fr);
+  margin-top: 1rem;
 }
 .gallery__container > :nth-child(1) {
   grid-column: 1 / 3;
   grid-row: 1 / 3;
+}
+.gallery__container > :not(:nth-child(1)) {
+  padding-bottom: 3rem;
+}
+.gallery__container > :not(:nth-child(1)) h3 {
+  width: 20ch;
+  font-size: 1rem;
 }
 .gallery-card {
   border-radius: var(--border-radius-16);
@@ -284,7 +292,7 @@ header nav {
   border-radius: 100vmax;
   border: none;
   position: absolute;
-  top: 100px;
+  top: 130px;
 }
 .hide {
   display: none;
@@ -298,6 +306,7 @@ header nav {
   justify-content: center;
   text-align: center;
   margin-top: 1rem;
+  padding: 2rem;
 }
 .black {
   background-color: var(--black);
@@ -309,11 +318,13 @@ header nav {
   padding: 5rem;
   display: flex;
   justify-content: space-between;
-  margin-top: 2rem;
 }
 .social__links {
   display: flex;
   gap: 1rem;
+}
+.top {
+  top: 320px;
 }
 .name {
   display: flex;
@@ -360,6 +371,22 @@ header nav {
   font-size: calc(var(--fs-400)-2px);
   font-weight: var(--fw-bold);
   color: var(--white);
+}
+.gallery-content h3 {
+  font-size: var(--fs-200);
+  width: 27ch;
+}
+.gallery-content p {
+  font-size: calc(var(--fs-100) - 2px);
+  font-weight: var(--fw-medium);
+  font-size: var(--raleway);
+  color: #666666;
+  margin-top: 2rem;
+}
+.gradient {
+  background-image: url(../assets/bg.png),
+    linear-gradient(to bottom, #fff, #ffd283);
+  background-position: center center;
 }
 @media screen and (max-width: 500px) {
   .hide {
@@ -453,5 +480,8 @@ header nav {
   }
   .socials {
     margin-top: 1.5rem;
+  }
+  .gallery-btn {
+    top: 100px;
   }
 }
